examples/misc/error/compilation/module_import-rec_1.bfr
open import "module_import-rec_2.bfr"

let main = []